@@ -9739,7 +9739,7 @@ This works for /pnp4nagios/ urls and /pnp/.</p></div>
 <div class="paragraph"><p>Show custom vars in host / service ext info. List variable names to
 display in the host and service extinfo details page. Can be specified
 more than once to define multiple variables. You may use html in your
-variables.</p></div>
+variables. Use * as wildcard, ex.: _VAR*</p></div>
 <div class="paragraph"><p>ex.:</p></div>
 <div class="literalblock">
 <div class="content">
@@ -10587,7 +10587,7 @@ of your monitoring core configuration.</p></div>
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2012-07-10 12:29:11 CEST
+Last updated 2012-07-11 11:54:40 CEST
 </div>
 </div>
 </body>
